[package]
name = "tcp-proxy"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
monoio = {version = "0.0.3", features = ["sync", "utils", "bytes", "macros"]}

[[bin]]
name = "tcp-tcp"
path = "src/tcp-tcp.rs"

[[bin]]
name = "tcp-unix"
path = "src/tcp-unix.rs"

[[bin]]
name = "unix-tcp"
path = "src/unix-tcp.rs"

[[bin]]
name = "unix-unix"
path = "src/unix-unix.rs"
